[package]
name = "timely-affinity"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

[dependencies]
getopts = { version = "0.2.14" }
timely_logging = { git = "https://github.com/LorenzoMartini/timely-dataflow", branch = "lmartini/modelling" }
timely_communication = { git = "https://github.com/LorenzoMartini/timely-dataflow", branch = "lmartini/modelling" }
timely = { git = "https://github.com/LorenzoMartini/timely-dataflow", branch = "lmartini/modelling" }
libc = "^0.2"
